--- a/views/teacher/teacher_add.html
+++ b/views/teacher/teacher_add.html
@@ -17,7 +17,7 @@
             <div class="body teacher">
                 <!-- 面包屑 -->
                 <ol class="breadcrumb">
-                    <li><a href="javascript:;">讲师管理</a></li>
+                    <li><a href="./teacher_list">讲师管理</a></li>
                     <li class="active">讲师添加</li>
                 </ol>
                 <div class="teacher-add">
@@ -25,19 +25,19 @@
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">姓名</label>
                             <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" placeholder="讲师名称">
+                                <input type="text" class="form-control input-sm" placeholder="讲师名称" id="ip1">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">密码</label>
                             <div class="col-xs-4">
-                                <input type="password" class="form-control input-sm">
+                                <input type="password" class="form-control input-sm" id="ip2">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">入职时间</label>
                             <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm">
+                                <input type="text" class="form-control input-sm" id="ip3">
                             </div>
                         </div>
                         <div class="form-group">
@@ -45,7 +45,7 @@
                             <div class="col-xs-2">
                                 <select name="" class="form-control input-sm">
                                     <option value="">讲师</option>
-                                    <option value="">管理员</option>
+                                    <option value="" id="admin">管理员</option>
                                 </select>
                             </div>
                         </div>
@@ -53,16 +53,16 @@
                             <label for="" class="col-xs-3 control-label">性别</label>
                             <div class="col-xs-4">
                                 <label class="radio-inline">
-                                    <input type="radio" checked> 男
+                                    <input type="radio" checked name="gender"> 男
                                 </label>
                                 <label class="radio-inline">
-                                    <input type="radio"> 女
+                                    <input type="radio" name="gender" id="nv"> 女
                                 </label>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-7">
-                                <a href="./advert_list.html" class="btn btn-success btn-sm pull-right"> 添 加 </a>
+                                <a href="../advert/advert_list" class="btn btn-success btn-sm pull-right" id="t"> 添 加 </a>
                             </div>                          
                         </div>
                     </form>
@@ -72,5 +72,8 @@
     </div>
 
     <?php include("/views/common/script.html") ?>
+    <script>
+        require(["tAdd"]);
+    </script>
 </body>
 </html>
