--- a/views/teacher/teacher_list.html
+++ b/views/teacher/teacher_list.html
@@ -128,23 +128,28 @@
         <td>{{$value.tc_roster}}</td>
         <td>
             {{ if $value.tc_gender==1 }}
-                女
+            女
             {{else}}
-                男
+            男
             {{/if}}
         </td>
         <td>{{$value.tc_join_date}}</td>
         <td>{{$value.tc_cellphone}}</td>
-        <td>
-            <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">查 看</a>
-            <a href="./teacher_add.html" class="btn btn-info btn-xs">编 辑</a>
-            <a href="javascript::" class="btn btn-warning btn-xs">注 销</a>
+        <td data-id="{{$value.tc_id}}" data-status="{{$value.tc_status}}">
+            <a href="#teacherModal" data-toggle="modal" class="btn btn-info btn-xs">check</a>
+            <a href="javascript:;" class="btn btn-info btn-xs">upload</a>
+            <a href="javascript:;" class="btn btn-warning btn-xs doa">
+                {{if $value.tc_status == 0}}
+                open
+                {{else}}
+                close
+                {{/if}}
+            </a>
         </td>
     </tr>
     {{/each}}
 </script>
 <?php include("/views/common/script.html") ?>
-
 <script>
     require(["tList"]);
 </script>
