--- a/views/teacher/teacher_add.html
+++ b/views/teacher/teacher_add.html
@@ -4,76 +4,91 @@
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
     <?php include("/views/common/style.html") ?>
+    <link rel="stylesheet" href="/now/mybxg/public/assets/bootstrap-datepicker/css/bootstrap-datepicker.css"/>
 </head>
 <body>
-    
-    <!-- 侧边栏 -->
-    <?php include("/views/common/aside.html") ?>
-    <!-- 主体 -->
-    <div class="main">
-        <div class="container-fluid">
-            <!-- 头部 -->
-            <?php include("/views/common/header.html") ?>
-            <div class="body teacher">
-                <!-- 面包屑 -->
-                <ol class="breadcrumb">
-                    <li><a href="./teacher_list">讲师管理</a></li>
-                    <li class="active">讲师添加</li>
-                </ol>
-                <div class="teacher-add">
-                    <form action="" class="form-horizontal col-xs-offset-2">
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">姓名</label>
-                            <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" placeholder="讲师名称" id="ip1">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">密码</label>
-                            <div class="col-xs-4">
-                                <input type="password" class="form-control input-sm" id="ip2">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">入职时间</label>
-                            <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" id="ip3">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">类型</label>
-                            <div class="col-xs-2">
-                                <select name="" class="form-control input-sm">
-                                    <option value="">讲师</option>
-                                    <option value="" id="admin">管理员</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-3 control-label">性别</label>
-                            <div class="col-xs-4">
-                                <label class="radio-inline">
-                                    <input type="radio" checked name="gender"> 男
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="gender" id="nv"> 女
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-xs-7">
-                                <a href="../advert/advert_list" class="btn btn-success btn-sm pull-right" id="t"> 添 加 </a>
-                            </div>                          
-                        </div>
-                    </form>
-                </div>
-            </div>
+
+<!-- 侧边栏 -->
+<?php include("/views/common/aside.html") ?>
+<!-- 主体 -->
+<div class="main">
+    <div class="container-fluid">
+        <!-- 头部 -->
+        <?php include("/views/common/header.html") ?>
+        <div class="body teacher" id="tInfo">
+            <!-- 面包屑 -->
+            <!-- todo -->
         </div>
     </div>
+</div>
+<script type="text/template" id="info">
+    <ol class="breadcrumb">
+        <li><a href="./teacher_list">讲师管理</a></li>
+        <li class="active">{{title}}</li>
+    </ol>
+    <div class="teacher-add">
+        <form class="form-horizontal col-xs-offset-2" id="teacherForm">
+            {{if tc_id}}
+            <input type="hidden" name="tc_id" value="{{tc_id}}" />
+            {{/if}}
+            <div class="form-group">
+                <label for="" class="col-xs-3 control-label">姓名</label>
 
-    <?php include("/views/common/script.html") ?>
-    <script>
-        require(["tAdd"]);
-    </script>
+                <div class="col-xs-4">
+                    <input type="text" class="form-control input-sm" name="tc_name" value="{{tc_name}}">
+                </div>
+            </div>
+            {{if !tc_id}}
+            <div class="form-group">
+                <label for="" class="col-xs-3 control-label">密码</label>
+
+                <div class="col-xs-4">
+                    <input type="password" class="form-control input-sm" name="tc_pass">
+                </div>
+            </div>
+            {{/if}}
+            <div class="form-group">
+                <label for="" class="col-xs-3 control-label">入职时间</label>
+
+                <div class="col-xs-4">
+                    <input type="text" data-provide="datepicker" data-date-language="zh-CN" data-date-format="yyyy-mm-dd" data-date-end-date="0d" class="form-control input-sm" name="tc_join_date" value="{{tc_join_date}}">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="" class="col-xs-3 control-label">类型</label>
+
+                <div class="col-xs-2">
+                    <select name="tc_type" class="form-control input-sm">
+
+                        <option value="1" {{if tc_type==1}}selected{{/if}}>讲师</option>
+                        <option value="0" {{if tc_type==0}}selected{{/if}}>管理员</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="" class="col-xs-3 control-label">性别</label>
+
+                <div class="col-xs-4">
+
+                    <label class="radio-inline">
+                        <input type="radio" {{if tc_gender==0}}checked{{/if}} name="tc_gender" value="0"/> 男
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" {{if tc_gender==1}}checked{{/if}} name="tc_gender" value="1"/> 女
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-xs-7">
+                    <a href="javascript:;" class="btn btn-success btn-sm pull-right" id="uploadF">{{finish}}</a>
+                </div>
+            </div>
+        </form>
+    </div>
+</script>
+<?php include("/views/common/script.html") ?>
+<script>
+    require(["tUA"]);
+</script>
 </body>
 </html>
