--- a/views/common/aside.html
+++ b/views/common/aside.html
@@ -8,19 +8,19 @@
     <div class="navs">
         <ul class="list-unstyled">
             <li>
-                <a href="/main/index" class="active">
+                <a href="/main/index">
                     <i class="fa fa-home"></i>
                     仪表盘
                 </a>
             </li>
             <li>
-                <a href="../user/user_list">
+                <a href="/user/user_list">
                     <i class="fa fa-bell"></i>
                     用户管理
                 </a>
             </li>
             <li>
-                <a href="../teacher/teacher_list">
+                <a href="/teacher/teacher_list">
                     <i class="fa fa-bell"></i>
                     讲师管理
                 </a>
@@ -33,48 +33,13 @@
                 </a>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="../course/course_add">
+                        <a href="/course/course_add">
                             课程添加
                         </a>
                     </li>
                     <li>
-                        <a href="../course/course_list">
+                        <a href="/course/course_list">
                             课程列表
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../course/course_category">
-                            课程分类
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../course/course_topic">
-                            课程专题
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="../advert/advert_list">
-                    <i class="fa fa-bell"></i>
-                    广告管理
-                </a>
-            </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="fa fa-cog"></i>
-                    系统设置
-                    <i class="arrow fa fa-angle-right"></i>
-                </a>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="javascript:;">
-                            网站设置
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            权限管理
                         </a>
                     </li>
                 </ul>
