--- a/views/common/script.html
+++ b/views/common/script.html
@@ -1,5 +1,5 @@
-<script src="../../public/assets/require/require.js"></script>
-<script src="../../public/js/config.js"></script>
-<script>
+<script src="/public/assets/require/require.js"></script>
+<script src="/public/js/config.js"></script>
+<script type="text/javascript">
     require(["common"]);
 </script>
