--- a/views/course/course_list.html
+++ b/views/course/course_list.html
@@ -73,7 +73,7 @@
             {{/if}}
         </div>
         <div class="info">
-            <a href="/course/course_add_step1?cs_id={{$value.cs_id}}&edit=1">{{$value.cg_name}}</a>
+            <a href="/course/course_add_step1?cs_id={{$value.cs_id}}&flag=1">{{$value.cg_name}}</a>
             <ul class="list-unstyled">
                 <li>
                     <span>讲师：{{$value.tc_name}}</span>
