--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -109,7 +109,7 @@
             </div>
             <div class="form-group">
                 <div class="col-xs-8">
-                    <input type="submit" class="btn btn-success btn-sm pull-right" value="save" id="save"/>
+                    <input type="submit" class="btn btn-success btn-sm pull-right" value="save"/>
                     <a href="./repass.html" class="btn btn-link btn-sm pull-right">更改密码？</a>
                 </div>
             </div>
