--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -119,5 +119,8 @@
     <script type="text/javascript">
         require(["sets"]);
     </script>
+    <script>
+        require(["mask"]);
+    </script>
 </body>
 </html>
